Update blog.html via editor

--- a/blog.html
+++ b/blog.html
@@ -78,10 +78,15 @@
                 <span class="font-bold text-xl text-gray-900 hidden sm:inline">Real Estate Bookkeeping</span>
             </a>
             
-            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 flex items-center gap-2">
-                <i class="fas fa-arrow-left"></i>
-                <span>Back</span>
-            </a>
+            <div class="flex items-center gap-6">
+                <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">
+                    Blog
+                </a>
+                <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 flex items-center gap-2">
+                    <i class="fas fa-arrow-left"></i>
+                    <span>Back</span>
+                </a>
+            </div>
         </nav>
     </header>
 
@@ -174,16 +179,29 @@
             <!-- Blog Posts Grid -->
             <div class="mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold tracking-tight text-gray-900 mb-8">
-                    More Articles Coming Soon
+                    All Articles
                 </h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Empty Card 1 -->
-                    <div class="card-hover bg-white rounded-2xl p-8 border border-gray-200 soft-shadow h-96 flex items-center justify-center">
-                        <div class="text-center">
-                            <div class="w-16 h-16 rounded-full bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] flex items-center justify-center mx-auto mb-4">
-                                <i class="fas fa-pen-fancy text-white text-2xl"></i>
+                    <!-- Test Blog Post -->
+                    <div class="card-hover bg-white rounded-2xl overflow-hidden border border-gray-200 soft-shadow flex flex-col h-full">
+                        <div class="bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] h-40 flex items-center justify-center">
+                            <div class="text-6xl text-white">
+                                <i class="fas fa-lightbulb"></i>
                             </div>
-                            <p class="text-gray-600 font-medium">New article coming soon</p>
+                        </div>
+                        <div class="p-6 flex flex-col flex-grow">
+                            <h3 class="text-xl font-bold text-gray-900 mb-2">Charlotte Real Estate Agent Tax Tips</h3>
+                            <p class="text-gray-600 text-sm mb-4 flex items-center gap-2">
+                                <i class="fas fa-calendar-alt text-[#5B4BFF]"></i>
+                                December 25, 2025
+                            </p>
+                            <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
+                                Discover essential tax tips specifically designed for Charlotte real estate agents. Learn about deductions, record-keeping best practices, and strategies to maximize your savings.
+                            </p>
+                            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/test-blog.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
+                                <span>Read More</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
 
