--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="#benefits" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Benefits</a>
                 <a href="#about" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">About</a>
                 <a href="#testimonials" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Testimonials</a>
-                <a href="#faq" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">FAQ</a>
+                <a href="#blog" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Blog</a><a href="#faq" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">FAQ</a>
             </div>
             
             <!-- Mobile Menu Button -->
@@ -100,7 +100,7 @@
                 <a href="#benefits" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Benefits</a>
                 <a href="#about" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">About</a>
                 <a href="#testimonials" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Testimonials</a>
-                <a href="#faq" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">FAQ</a>
+                <a href="#blog" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Blog</a><a href="#faq" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">FAQ</a>
             </div>
         </div>
     </header>
