Update index.html via editor

--- a/index.html
+++ b/index.html
@@ -416,7 +416,25 @@
     </section>
 
 
-    <!-- FAQ Section -->
+        <!-- Blog Section -->
+    <section id="blog" class="py-24 px-4 sm:px-6 lg:px-8 bg-white">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-16">
+                <h2 class="text-4xl md:text-5xl font-bold tracking-tight text-gray-900 mb-4">
+                    Real Estate Bookkeeping Blog
+                </h2>
+                <p class="text-xl text-gray-600 max-w-2xl mx-auto">
+                    Stay updated with insights, tips, and industry news for real estate professionals.
+                </p>
+            </div>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <p class="text-gray-600 text-center col-span-full">Blog content coming soon...</p>
+            </div>
+        </div>
+    </section>
+
+<!-- FAQ Section -->
     <section id="faq" class="py-24 px-4 sm:px-6 lg:px-8 bg-white">
         <div class="max-w-4xl mx-auto">
             <div class="text-center mb-16">
