Update blog.html via editor

--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
             </a>
             
             <div class="flex items-center gap-6">
-                <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">
+                <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/blog.html" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">
                     Blog
                 </a>
                 <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 flex items-center gap-2">
