Update blog.html via editor

--- a/blog.html
+++ b/blog.html
@@ -146,16 +146,16 @@
                             </span>
                         </div>
                         <h3 class="text-3xl lg:text-4xl font-bold text-gray-900 mb-4 leading-tight">
-                            The Complete Guide to Tax Deductions for Real Estate Professionals: Maximize Your Savings
+                            Your Guide to the Mecklenburg County Property Tax Rate
                         </h3>
                         <p class="text-gray-600 text-sm mb-6 flex items-center gap-2">
                             <i class="fas fa-calendar-alt text-[#5B4BFF]"></i>
-                            December 25, 2025
+                            December 28, 2025
                         </p>
                         <p class="text-lg text-gray-700 leading-relaxed mb-6">
-                            Real estate professionals often miss thousands in annual tax deductions through inadequate documentation and awareness. This comprehensive guide explores essential deductions including vehicle expenses, home office deductions, marketing costs, professional development, office supplies, and travel expenses. Learn key strategies for maintaining detailed records, separating business and personal finances, conducting quarterly reviews, and partnering with specialized bookkeepers to avoid common mistakes and maximize your annual savings.
+                            Understanding property tax rates is crucial for real estate professionals in Mecklenburg County. This comprehensive guide explores how property taxes work, the current tax rates, assessment procedures, and strategies to help your clients optimize their tax positions while ensuring compliance with local regulations.
                         </p>
-                        <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/the-complete-guide-to-tax-deductions-for-real-esta.html" class="gradient-btn text-white font-bold py-3 px-8 rounded-full text-center hover:shadow-xl transition-all duration-300 inline-flex items-center justify-center gap-2 w-fit">
+                        <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/your-guide-to-the-mecklenburg-county-property-tax-rate.html" class="gradient-btn text-white font-bold py-3 px-8 rounded-full text-center hover:shadow-xl transition-all duration-300 inline-flex items-center justify-center gap-2 w-fit">
                             <span>Read Full Article</span>
                             <i class="fas fa-arrow-right"></i>
                         </a>
@@ -166,9 +166,9 @@
                             <div class="relative bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] rounded-3xl p-8 soft-shadow h-full flex items-center justify-center">
                                 <div class="text-center">
                                     <div class="text-6xl font-bold text-white mb-4">
-                                        <i class="fas fa-receipt"></i>
+                                        <i class="fas fa-home"></i>
                                     </div>
-                                    <p class="text-white text-lg font-medium">Tax Deductions Guide</p>
+                                    <p class="text-white text-lg font-medium">Property Tax Guide</p>
                                 </div>
                             </div>
                         </div>
@@ -182,7 +182,30 @@
                     All Articles
                 </h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Test Blog Post -->
+                    <!-- Blog Post 1 -->
+                    <div class="card-hover bg-white rounded-2xl overflow-hidden border border-gray-200 soft-shadow flex flex-col h-full">
+                        <div class="bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] h-40 flex items-center justify-center">
+                            <div class="text-6xl text-white">
+                                <i class="fas fa-file-invoice-dollar"></i>
+                            </div>
+                        </div>
+                        <div class="p-6 flex flex-col flex-grow">
+                            <h3 class="text-xl font-bold text-gray-900 mb-2">The Complete Guide to Tax Deductions for Real Estate Professionals: Maximize Your Savings</h3>
+                            <p class="text-gray-600 text-sm mb-4 flex items-center gap-2">
+                                <i class="fas fa-calendar-alt text-[#5B4BFF]"></i>
+                                December 28, 2025
+                            </p>
+                            <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
+                                Real estate professionals often miss thousands in annual tax deductions through inadequate documentation and awareness. This comprehensive guide explores essential deductions including vehicle expenses, home office deductions, marketing costs, professional development, office supplies, and travel expenses.
+                            </p>
+                            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/the-complete-guide-to-tax-deductions-for-real-esta.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
+                                <span>Read More</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Blog Post 2 -->
                     <div class="card-hover bg-white rounded-2xl overflow-hidden border border-gray-200 soft-shadow flex flex-col h-full">
                         <div class="bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] h-40 flex items-center justify-center">
                             <div class="text-6xl text-white">
@@ -190,13 +213,13 @@
                             </div>
                         </div>
                         <div class="p-6 flex flex-col flex-grow">
-                            <h3 class="text-xl font-bold text-gray-900 mb-2">Charlotte Real Estate Agent Tax Tips</h3>
+                            <h3 class="text-xl font-bold text-gray-900 mb-2">Contractor Lead Costs in Charlotte: 2025 Price Analysis</h3>
                             <p class="text-gray-600 text-sm mb-4 flex items-center gap-2">
                                 <i class="fas fa-calendar-alt text-[#5B4BFF]"></i>
-                                December 25, 2025
+                                December 28, 2025
                             </p>
                             <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
-                                Discover essential tax tips specifically designed for Charlotte real estate agents. Learn about deductions, record-keeping best practices, and strategies to maximize your savings.
+                                Understanding lead costs is essential for contractors and real estate professionals in Charlotte. This analysis provides insights into current pricing trends, market conditions, and strategies to optimize your lead generation budget for maximum return on investment.
                             </p>
                             <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/test-blog.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
                                 <span>Read More</span>
@@ -205,24 +228,26 @@
                         </div>
                     </div>
 
-                    <!-- Empty Card 2 -->
-                    <div class="card-hover bg-white rounded-2xl p-8 border border-gray-200 soft-shadow h-96 flex items-center justify-center">
-                        <div class="text-center">
-                            <div class="w-16 h-16 rounded-full bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] flex items-center justify-center mx-auto mb-4">
-                                <i class="fas fa-pen-fancy text-white text-2xl"></i>
-                            </div>
-                            <p class="text-gray-600 font-medium">New article coming soon</p>
+                <!-- New Blog Post Example -->
+                <div class="card-hover bg-white rounded-2xl overflow-hidden border border-gray-200 soft-shadow flex flex-col h-full">
+                    <div class="bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] h-40 flex items-center justify-center">
+                        <div class="text-6xl text-white">
+                            <i class="fas fa-chart-line"></i>
                         </div>
                     </div>
-
-                    <!-- Empty Card 3 -->
-                    <div class="card-hover bg-white rounded-2xl p-8 border border-gray-200 soft-shadow h-96 flex items-center justify-center">
-                        <div class="text-center">
-                            <div class="w-16 h-16 rounded-full bg-gradient-to-br from-[#5B4BFF] to-[#00E5A8] flex items-center justify-center mx-auto mb-4">
-                                <i class="fas fa-pen-fancy text-white text-2xl"></i>
-                            </div>
-                            <p class="text-gray-600 font-medium">New article coming soon</p>
-                        </div>
+                    <div class="p-6 flex flex-col flex-grow">
+                        <h3 class="text-xl font-bold text-gray-900 mb-2">Your New Blog Title</h3>
+                        <p class="text-gray-600 text-sm mb-4 flex items-center gap-2">
+                            <i class="fas fa-calendar-alt text-[#5B4BFF]"></i>
+                            December 25, 2025
+                        </p>
+                        <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
+                            Your blog post description here.
+                        </p>
+                        <a href="#" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2">
+                            <span>Read More</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
             </div>
