Update blog.html via editor

--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@
     <!-- Header & Navigation -->
     <header class="sticky top-0 z-50 bg-white shadow-md">
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
-            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un" class="flex items-center gap-2">
+            <a href="https://www.realestatebookscharlottenc.com/" class="flex items-center gap-2">
                 <div class="w-10 h-10 rounded-full gradient-primary flex items-center justify-center text-white font-bold text-lg">
                     RE
                 </div>
@@ -106,10 +106,10 @@
             </a>
             
             <div class="flex items-center gap-6">
-                <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/blog.html" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">
+                <a href="https://www.realestatebookscharlottenc.com/blog.html" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">
                     Blog
                 </a>
-                <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 flex items-center gap-2">
+                <a href="https://www.realestatebookscharlottenc.com/blog.html" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 flex items-center gap-2">
                     <i class="fas fa-arrow-left"></i>
                     <span>Back</span>
                 </a>
@@ -182,7 +182,7 @@
                         <p class="text-lg text-gray-700 leading-relaxed mb-6">
                             Understanding property tax rates is crucial for real estate professionals in Mecklenburg County. This comprehensive guide explores how property taxes work, the current tax rates, assessment procedures, and strategies to help your clients optimize their tax positions while ensuring compliance with local regulations.
                         </p>
-                        <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/your-guide-to-the-mecklenburg-county-property-tax-rate.html" class="gradient-btn text-white font-bold py-3 px-8 rounded-full text-center hover:shadow-xl transition-all duration-300 inline-flex items-center justify-center gap-2 w-fit">
+                        <a href="https://www.realestatebookscharlottenc.com/your-guide-to-the-mecklenburg-county-property-tax-rate.html" class="gradient-btn text-white font-bold py-3 px-8 rounded-full text-center hover:shadow-xl transition-all duration-300 inline-flex items-center justify-center gap-2 w-fit">
                             <span>Read Full Article</span>
                             <i class="fas fa-arrow-right"></i>
                         </a>
@@ -225,7 +225,7 @@
                             <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
                                 Real estate professionals often miss thousands in annual tax deductions through inadequate documentation and awareness. This comprehensive guide explores essential deductions including vehicle expenses, home office deductions, marketing costs, professional development, office supplies, and travel expenses.
                             </p>
-                            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/the-complete-guide-to-tax-deductions-for-real-esta.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
+                            <a href="https://www.realestatebookscharlottenc.com/the-complete-guide-to-tax-deductions-for-real-estate-professionals.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
                                 <span>Read More</span>
                                 <i class="fas fa-arrow-right"></i>
                             </a>
@@ -248,7 +248,7 @@
                             <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
                                 Understanding lead costs is essential for contractors and real estate professionals in Charlotte. This analysis provides insights into current pricing trends, market conditions, and strategies to optimize your lead generation budget for maximum return on investment.
                             </p>
-                            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/test-blog.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
+                            <a href="https://www.realestatebookscharlottenc.com/contractor-lead-costs-in-charlotte.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
                                 <span>Read More</span>
                                 <i class="fas fa-arrow-right"></i>
                             </a>
@@ -271,7 +271,7 @@
                             <p class="text-gray-700 leading-relaxed mb-6 flex-grow">
                                 Understanding property tax rates is crucial for real estate professionals in Mecklenburg County. This comprehensive guide explores how property taxes work, the current tax rates, assessment procedures, and strategies to help your clients.
                             </p>
-                            <a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un/blog/your-guide-to-the-mecklenburg-county-property-tax-rate.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
+                            <a href="https://www.realestatebookscharlottenc.com/your-guide-to-the-mecklenburg-county-property-tax-rate.html" class="text-[#5B4BFF] hover:text-[#00E5A8] font-semibold flex items-center gap-2 transition-colors duration-300">
                                 <span>Read More</span>
                                 <i class="fas fa-arrow-right"></i>
                             </a>
@@ -348,10 +348,10 @@
                 <div>
                     <h4 class="font-bold text-white mb-4">Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un#features" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Services</a></li>
-                        <li><a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un#benefits" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Benefits</a></li>
-                        <li><a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un#about" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">About Us</a></li>
-                        <li><a href="https://tiegebentley.github.io/real-estate-agent-bookkeeping-2025-12-25-hx0un#testimonials" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Testimonials</a></li>
+                        <li><a href="https://www.realestatebookscharlottenc.com/#features" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Services</a></li>
+                        <li><a href="https://www.realestatebookscharlottenc.com/#benefits" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Benefits</a></li>
+                        <li><a href="https://www.realestatebookscharlottenc.com/#about" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">About Us</a></li>
+                        <li><a href="https://www.realestatebookscharlottenc.com/#testimonials" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Testimonials</a></li>
                     </ul>
                 </div>
                 
