Update blog.html via editor

--- a/blog.html
+++ b/blog.html
@@ -66,11 +66,11 @@
         }
 
         .blog-post {
-            display: none;
+            display: none !important;
         }
 
         .blog-post.active {
-            display: flex;
+            display: flex !important;
         }
 
         .pagination-btn {
