Update blog.html via editor

--- a/blog.html
+++ b/blog.html
@@ -477,6 +477,9 @@
                 // Scroll to blog section
                 document.getElementById('blogPostsContainer').scrollIntoView({ behavior: 'smooth', block: 'start' });
             }
+
+            // Initialize first page
+            showPage(1);
         });
     </script>
 
