Update index.html via editor

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
                 <a href="#features" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Services</a>
                 <a href="#benefits" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Benefits</a>
                 <a href="#about" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">About</a>
-                <a href="#testimonials" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Testimonials</a>
                 <a href="blog.html" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">Blog</a>
                 <a href="#faq" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300">FAQ</a>
             </div>
@@ -100,7 +99,6 @@
                 <a href="#features" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Services</a>
                 <a href="#benefits" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Benefits</a>
                 <a href="#about" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">About</a>
-                <a href="#testimonials" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Testimonials</a>
                 <a href="blog.html" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">Blog</a>
                 <a href="#faq" class="text-gray-700 hover:text-[#5B4BFF] font-medium transition-colors duration-300 py-2">FAQ</a>
             </div>
@@ -438,7 +436,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
                         </svg>
                     </button>
-                    <div class="faq-answer hidden px-8 pb-6 text-gray-700 leading-relaxed">
+                    <div class="faq-answer px-8 pb-6 text-gray-700 leading-relaxed">
                         <p>Tax savings vary based on your individual business situation, but our clients typically discover $8,000-$15,000 in previously missed deductions annually. Beyond deduction capture, our strategic tax planning often results in additional savings of 15-25% of your tax liability through legitimate tax reduction strategies. We recommend a consultation to analyze your specific situation and provide a personalized estimate of potential savings.</p>
                     </div>
                 </div>
@@ -451,7 +449,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
                         </svg>
                     </button>
-                    <div class="faq-answer hidden px-8 pb-6 text-gray-700 leading-relaxed">
+                    <div class="faq-answer px-8 pb-6 text-gray-700 leading-relaxed">
                         <p>We work with QuickBooks Online, which offers excellent real estate-specific features and integrations. QuickBooks allows us to provide you with real-time access to your financial data, generate custom reports, and maintain seamless communication about your business finances. If you already use a different accounting platform, we can discuss integration options. Our team is proficient with multiple accounting systems and can recommend the best solution for your specific needs.</p>
                     </div>
                 </div>
@@ -464,7 +462,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
                         </svg>
                     </button>
-                    <div class="faq-answer hidden px-8 pb-6 text-gray-700 leading-relaxed">
+                    <div class="faq-answer px-8 pb-6 text-gray-700 leading-relaxed">
                         <p>Absolutely. We provide comprehensive bookkeeping services for team leaders, brokers, and larger real estate organizations. Our services scale to handle multiple agents' finances, consolidated reporting, team performance analysis, and brokerage-level accounting. We understand the unique financial management challenges of leading a real estate team and provide customized solutions that support your leadership objectives. Contact us to discuss how we can support your organization's financial management.</p>
                     </div>
                 </div>
@@ -477,7 +475,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
                         </svg>
                     </button>
-                    <div class="faq-answer hidden px-8 pb-6 text-gray-700 leading-relaxed">
+                    <div class="faq-answer px-8 pb-6 text-gray-700 leading-relaxed">
                         <p>Communication frequency is customized based on your preferences and needs. Most clients benefit from quarterly business reviews where we analyze your financial performance, discuss tax planning strategies, and address any questions. Monthly financial statements are available in your QuickBooks account for real-time monitoring. We're also available for ad-hoc consultations whenever you need guidance. Our goal is to maintain regular, meaningful communication that supports your business success without overwhelming you with unnecessary updates.</p>
                     </div>
                 </div>
@@ -490,7 +488,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
                         </svg>
                     </button>
-                    <div class="faq-answer hidden px-8 pb-6 text-gray-700 leading-relaxed">
+                    <div class="faq-answer px-8 pb-6 text-gray-700 leading-relaxed">
                         <p>We're confident you'll want to stay with us, but we respect your freedom to choose. All your financial records and data are yours to keep. We maintain your books in industry-standard QuickBooks format, making it easy to transition to another provider if you ever choose to do so. We'll provide complete documentation and cooperate fully with any transition process. Our commitment is to provide such exceptional service that you'll want to remain a valued client for years to come.</p>
                     </div>
                 </div>
@@ -722,7 +720,7 @@
                         <li><a href="#features" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Services</a></li>
                         <li><a href="#benefits" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Benefits</a></li>
                         <li><a href="#about" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">About Us</a></li>
-                        <li><a href="#testimonials" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Testimonials</a></li>
+                        <li><a href="#contact" class="text-gray-400 hover:text-[#00E5A8] transition-colors duration-300">Contact</a></li>
                     </ul>
                 </div>
                 
