Update privacy.html via editor

--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Privacy Policy - Real Estate Agent Bookkeeping">
     <meta property="og:description" content="Privacy Policy for Real Estate Agent Bookkeeping services.">
     <meta property="og:type" content="website">
-    <title>Privacy Policy | Real Estate Agent Bookkeeping</title>
+    <title>Privacy Policy | Real Estate Agent Bookkeeping</title>    <link rel="icon" type="image/jpeg" href="https://res.cloudinary.com/djuh6eqct/image/upload/v1766960373/Generated_Image_December_28_2025_-_5_18PM_zguva2.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
